# pal

./: .gitignore  CMakeLists.txt  Makefile.am  README.md  SConstruct  codemeta.json  component.xml  component.xml.in  configure.ac  pal.h  pal.news  pal1.h  pal1Atms.c  pal1Atmt.c  pal1sofa.h  palAddet.c  palAirmas.c  palAltaz.c  palAmp.c  palAmpqk.c  palAop.c  palAoppa.c  palAoppat.c  palAopqk.c  palAtmdsp.c  palCaldj.c  palDafin.c  palDat.c  palDcmpf.c  palDe2h.c  palDeuler.c  palDfltin.c  palDh2e.c  palDjcal.c  palDmat.c  palDmoon.c  palDrange.c  palDs2tp.c  palDt.c  palDtp2s.c  (+74 more)
pubs/adass2012/: P56.bib  P56.tex
